changes on mobile view

--- a/src/views/LandingPage/About/style.css
+++ b/src/views/LandingPage/About/style.css
@@ -24,3 +24,15 @@ h1.about__title {
 .about__main p {
   text-indent: 3ch
 }
+
+@media screen and (max-width: 768px) {
+  .about__main .about__me__content {
+    width: 90%;
+    font-size : 18px;
+  }
+
+  h1.about__title {
+    padding : 5vh 0;
+    font-size: 4vw;
+  }
+}
