Challenge - almost done

--- a/src/views/LandingPage/index.html
+++ b/src/views/LandingPage/index.html
@@ -8,4 +8,8 @@
   <section id="about">
     @@include('./About/about.html')
   </section>
+
+  <section id="challenge">
+    @@include('./Challenge/challenge.html')
+  </section>
 </main>
