Parcial - umas outras coisas

--- a/src/views/LandingPage/Challenge/challenge.html
+++ b/src/views/LandingPage/Challenge/challenge.html
@@ -1,21 +1,39 @@
 <div class="challenge">
-  <div class="challenge__card">
-    <div class="challenge__avatar">
-      <div class="avatar__img">
+  <!-- <h1>Desafio</h1> -->
+  <div class="challenge__content">
+    <div class="challenge__card">
+      <div class="challenge__avatar">
+        <div class="avatar__img">
+        </div>
+        &nbsp;
+        <span class="challenge__profile__name">Visitar Perfil</span>
       </div>
-      &nbsp;
-      <span class="challenge__profile__name">Visitar Perfil</span>
+      <div class="challenge__user__info">
+        <ul>
+          <li>Repositórios: <span class="repo__qtd"></span></li>
+          <li>Seguidores: <span class="follower__qtd"></span></li>
+          <li>Seguindo: <span class="following__qtd"></span></li>
+        </ul>
+
+        <div class="challenge__options">
+          <span class="show__repo">Ver repositórios</span>
+          <span class="show__starred">Ver favoritos</span>
+        </div>
+      </div>
     </div>
-    <div class="challenge__user__info">
-      <ul>
-        <li>Repositórios: <span class="repo__qtd"></span></li>
-        <li>Seguidores: <span class="follower__qtd"></span></li>
-        <li>Seguindo: <span class="following__qtd"></span></li>
-      </ul>
-      
-      <div class="challenge__options">
-        <span>Ver repositórios</span>
-        <span>Ver favoritos</span>
+    <div class="challenge__hidden__menu">
+      <div class="challenge__hidden__menu__content">
+        <span class="challenge__hr"></span>
+        &nbsp;
+        <h1>Lista dos repositórios</h1>
+        &nbsp;
+        <table class="repo__list">
+          <tbody>
+            <tr>
+              <td>wefwef aaa</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
