--- a/src/views/LandingPage/index.html
+++ b/src/views/LandingPage/index.html
@@ -2,11 +2,11 @@
   @@include('./Navbar/navbar.html')
 
   <section id="home">
-    @@include('./Home/home.html')
+    <!-- @@include('./Home/home.html') -->
   </section>
 
   <section id="about">
-    @@include('./About/about.html')
+    <!-- @@include('./About/about.html') -->
   </section>
 
   <section id="challenge">
