--- a/src/views/LandingPage/Challenge/challenge.html
+++ b/src/views/LandingPage/Challenge/challenge.html
@@ -2,6 +2,7 @@
   <!-- <h1>Desafio</h1> -->
   <div class="challenge__content">
     <div class="challenge__card">
+      <i class="challenge__i"></i>
       <div class="challenge__avatar">
         <div class="avatar__img">
         </div>
@@ -10,8 +11,8 @@
       </div>
       <div class="challenge__user__info">
         <ul>
-          <li>Repositórios: <span class="repo__qtd"></span></li>
-          <li>Seguidores: <span class="follower__qtd"></span></li>
+          <li>Repositórios: <span class="public_repos__qtd"></span></li>
+          <li>Seguidores: <span class="followers__qtd"></span></li>
           <li>Seguindo: <span class="following__qtd"></span></li>
         </ul>
 
@@ -25,13 +26,10 @@
       <div class="challenge__hidden__menu__content">
         <span class="challenge__hr"></span>
         &nbsp;
-        <h1>Lista dos repositórios</h1>
+        <h2 class="hidden__menu__title">Repositórios</h2>
         &nbsp;
         <table class="repo__list">
           <tbody>
-            <tr>
-              <td>wefwef aaa</td>
-            </tr>
           </tbody>
         </table>
       </div>
