--- a/src/views/LandingPage/Challenge/style.css
+++ b/src/views/LandingPage/Challenge/style.css
@@ -22,6 +22,7 @@
 }
 
 .challenge__avatar {
+  z-index        : 1;
   display        : flex;
   flex-direction : column;
   align-items    : center;
@@ -32,10 +33,10 @@
 }
 
 .challenge__avatar .avatar__img {
-  background-size : cover;
-  width           : 100%;
-  height          : 63%;
-  border-radius   : 100%;
+  background-size: cover;
+  width          : 100%;
+  height         : 63%;
+  border-radius  : 100%;
 }
 
 .challenge__profile__name {
@@ -104,7 +105,7 @@
 .challenge__hidden__menu {
   overflow-y    : auto;
   min-width     : 45vw;
-  height        : 20vh;
+  height        : 0;
   display       : flex;
   flex-direction: column;
   align-items   : center;
@@ -113,6 +114,10 @@
 .challenge__hidden__menu__content {
   width : 95%;
   height: 100%;
+}
+
+.hidden__menu__title {
+  font-family : "Dosis";
 }
 
 .repo__list {
@@ -125,8 +130,31 @@
 
 .repo__list tr td {
   padding: 10px;
+  font-family : "Dosis";
 }
 
 .repo__list tr:nth-child(2n + 1) {
   background-color: rgba(154 238 191 / 0.40);
+}
+
+.challenge__card.on__loading {
+  display         : flex;
+  justify-content : center;
+  align-items     : center;
+  min-width       : 45vw;
+  height          : 33vh;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.icon-loading {
+  margin: 0 auto;
+}
+
+.challenge__card.on__loading>div {
+  display: none;
+}
+
+.show__menu {
+  height    : 20vh;
+  transition: 0.3s ease-in;
 }
