--- a/src/views/LandingPage/Navbar/style.css
+++ b/src/views/LandingPage/Navbar/style.css
@@ -1,5 +1,6 @@
 nav {
   z-index         : 9;
+  font-family     : "Dosis";
   position        : absolute;
   top             : 0;
   width           : 100%;
