Responsive mobile added to challenge tab

--- a/src/views/LandingPage/Challenge/challenge.html
+++ b/src/views/LandingPage/Challenge/challenge.html
@@ -10,6 +10,7 @@
         <span class="challenge__profile__name">Visitar Perfil</span>
       </div>
       <div class="challenge__user__info">
+        <span class="challenge__hr user__info"></span>
         <ul>
           <li>Repositórios: <span class="public_repos__qtd"></span></li>
           <li>Seguidores: <span class="followers__qtd"></span></li>
