--- a/src/views/LandingPage/About/about.html
+++ b/src/views/LandingPage/About/about.html
@@ -1,6 +1,32 @@
 <div class="about__main">
   <h1 class="about__title">Sobre</h1>
   <section class="about__me__content">
-    <p>Eu realmente tinha escrito sobre mim kkkkk tnc</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum leo et suscipit blandit. Morbi a
+      consectetur
+      mauris, id bibendum dolor. Pellentesque cursus, mi quis faucibus feugiat, sem purus hendrerit arcu, at faucibus
+      lacus
+      ante at nisl. Vestibulum consectetur est non massa consectetur ornare. Aliquam porttitor rhoncus velit vel tempus.
+      Aliquam maximus lobortis urna.</p>
+    &nbsp;
+    <p>
+      Ut ut elementum odio, at faucibus libero. Sed tempus turpis at nisl vestibulum vehicula. Maecenas feugiat lectus
+      in
+      purus ultricies mollis. Sed posuere velit in velit maximus, non suscipit purus ultricies. Sed eleifend, diam sed
+      laoreet
+      porttitor, est turpis cursus lacus, a iaculis purus massa at enim. Vestibulum luctus quam sit amet velit
+      pellentesque
+      malesuada. Aenean ligula neque, suscipit id pellentesque ac, luctus ut est. Sed facilisis, turpis nec porttitor
+      lobortis, ante urna tincidunt arcu, congue eleifend elit nisi sit amet leo. Nunc non rutrum sapien, faucibus
+      dictum
+      tortor.
+    </p>
+    <p>
+      Mauris viverra velit finibus tortor suscipit maximus. Morbi sodales nunc congue orci tempus, a luctus risus
+      mattis.
+      Curabitur aliquam varius fringilla. Proin facilisis lacus ut nunc accumsan, nec consectetur risus porta. Quisque
+      elementum massa lobortis massa facilisis tempus. Fusce dui turpis, fermentum ac enim eu, luctus dignissim augue.
+      Integer
+      vitae malesuada eros, in sollicitudin elit.
+    </p>
   </section>
 </div>
