--- a/src/views/LandingPage/Navbar/navbar.html
+++ b/src/views/LandingPage/Navbar/navbar.html
@@ -3,9 +3,9 @@
     <h4>Eder Deivid</h4>
   </div>
   <ul class="nav__options">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Sobre</a></li>
-    <li><a href="#">Desafio</a></li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">Sobre</a></li>
+    <li><a href="#challenge">Desafio</a></li>
   </ul>
   <div class="nav__mobile__button">
     <div class="line1"></div>
