--- a/src/views/LandingPage/index.html
+++ b/src/views/LandingPage/index.html
@@ -1,15 +1,17 @@
 <main>
-  <!-- @@include('./Navbar/navbar.html') -->
+  <section id="navbar">
+    @@include('./Navbar/navbar.html')
+  </section>
 
   <section id="home">
-    <!-- @@include('./Home/home.html') -->
+    @@include('./Home/home.html')
   </section>
 
   <section id="about">
-    <!-- @@include('./About/about.html') -->
+    @@include('./About/about.html')
   </section>
 
   <section id="challenge">
-    <!-- @@include('./Challenge/challenge.html') -->
+    @@include('./Challenge/challenge.html')
   </section>
 </main>
