added social midia

--- a/src/views/LandingPage/Challenge/challenge.html
+++ b/src/views/LandingPage/Challenge/challenge.html
@@ -1,5 +1,5 @@
 <div class="challenge">
-  <!-- <h1>Desafio</h1> -->
+  <h1>Desafio</h1>
   <div class="challenge__content">
     <div class="challenge__card">
       <i class="challenge__i"></i>
