--- a/src/views/LandingPage/Home/home.html
+++ b/src/views/LandingPage/Home/home.html
@@ -1,6 +1,14 @@
 <div class="home__bg">
   <div class="home__text__info">
-    <!-- <h1 class="home__text__title">Desenvolvedor Front End</h1> -->
-    <!-- <span class="home__text__small">Desafio Qconcursos.com</span> -->
+    <div class="bg__text">
+      <h1 class="home__text__title">Desenvolvedor Front End</h1>
+      <span class="home__text__small">Desafio Qconcursos.com</span>
+
+    </div>
+    <div class="home__social">
+      <i class="icon-github"></i>
+      <i class="icon-instagram"></i>
+      <i class="icon-linkedin"></i>
+    </div>
   </div>
 </div>
