--- a/src/views/LandingPage/Home/style.css
+++ b/src/views/LandingPage/Home/style.css
@@ -7,26 +7,35 @@
   background-repeat: no-repeat;
 }
 
-.home__text__info {
-  font-family     : "Dosis";
-  width           : 100%;
-  height          : 100vh;
-  background-color: rgba(0, 0, 0, 0.75);
+.home__social {
+  display        : flex;
+  justify-content: center;
+  align-items    : center;
+  height         : 5%;
 }
 
-.home__text__info {
+.bg__text {
+  width          : 100%;
+  height         : 95%;
   display        : flex;
   flex-direction : column;
   justify-content: center;
-  text-align     : center;
+  align-items    : center;
 }
 
-.home__text__info>h1 {
+.home__text__info {
+  font-family     : "Dosis";
+  width           : 100%;
+  height          : 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.bg__text>h1 {
   font-size: 4vw;
   color    : #fff;
 }
 
-.home__text__info>span {
+.bg__text>span {
   font-size: 2vw;
   color    : #fff;
 }
@@ -36,11 +45,11 @@
     padding-top: 8vh;
   }
 
-  .home__text__info>h1 {
+  .bg__text>h1 {
     font-size: calc(4vw * 1.6);
   }
 
-  .home__text__info>span {
+  .bg__text>span {
     font-size: calc(2vw * 1.6);
   }
 }
